<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/etTotalBillAmount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/bill_amt"
        android:inputType="numberDecimal" >

    </EditText>

    <LinearLayout
        android:id="@+id/llTipButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTotalBillAmount"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnTen"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:gravity="left|center_vertical"
            android:text="@string/ten_perct" />

        <Button
            android:id="@+id/btnFifteen"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:gravity="left|center_vertical"
            android:text="@string/fifteen_perct" />

        <Button
            android:id="@+id/btnTwenty"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:gravity="left|center_vertical"
            android:text="@string/twenty_perct" />

        <Button
            android:id="@+id/btnCustom"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="left|center_vertical"
            android:text="@string/custom" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTotalTipAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llTipButton"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tvTotalTipLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/tip_is"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvTotalTipAmtLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="left"
            android:text="@string/dollar"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>